--- a/src/main/resources/static/kreiranjeNovogUsera.html
+++ b/src/main/resources/static/kreiranjeNovogUsera.html
@@ -72,7 +72,7 @@
                         <img src="pacijent.png" width="50" height="50" class="rounded-circle">
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="UI-0.html">Log out</a></li>
+                        <li><a class="dropdown-item" href="logIn.html">Log out</a></li>
                         <!--<li><a class="dropdown-item" href="#">Another action</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>-->
